New Function Added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-   <section>
+   <section class="section1" id="sec1">
       <div class="container">
          <div class="cart">
             <div class="col-md-12 col-lg-10 mx-auto">
@@ -71,13 +71,26 @@
                   </div>
                </div>
                <div class="col-md-12 pt-4 pb-4">
-                  <button type="button" class="btn btn-success check-out">Check Out</button>
+                  <button type="button" class="btn btn-success check-out" id="checkbtn">Check Out</button>
                </div>
             </div>
          </div>
       </div>
    </section>
+   <section class="section2" id="sec2">
+      <h1 class="text">Do You Have Enough Money?</h1>
+      <div>
+         <button class="yesbtn btn btn-success" id="positive">Yes,I Have !</button>
+         <button class="nobtn btn btn-danger" id="negative">Sorry,I Have Not :)</button>
+      </div>
+   </section>
+   <section class="section3" id="sec3">
+      <img src="images/kabila.jpg" alt="" class="image">
+   </section>
+   <section class="section4" id="sec4">
+      <h1>Congratulations...</h1>
+      <img src="images/congrats.jpg" alt="" class="congrats">
+   </section>
    <script src="card.js"></script>
 </body>
-
 </html>
